# veritas-core

./: .coverage  .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  STATUS.md  TODO.md  TODO_PRODUCTION.md  build.sh  concat_repo.py  logic-graph.yml  pyproject.toml  pytest.ini  requirements-dev.txt  sbom.json  status.yml  veritas.yml
.github/workflows/: ci.yml  security.yml
.hypothesis/constants/: 0aa5c879f6af4677  19bf6fbf25d2807d  21caad909b6ee4b6  2476f59c5b341dc8  2db8a069364651f9  2eb89cc50874575a  3bd20d86c3ae8582  475af8c450a4f28d  61930e273977e66c  9246ecd910095234  932024ddaeb9a661  a3575fdec05a2151  b4790b94353fafa6  c030b3d2d014a6a7  e1a8d6ed4185272a  e93483819d1cf7ed  f9cf0d63415e4152  fed4d6cdb70c2999
artifact/code/: constants.py
cpp/: delta_kernel.cpp
docker/: Dockerfile
docs/: ASYNC.md  BRAND.md  CHEATSHEET.md  COOKBOOK.md  EVIDENCE_MATRIX.md  FORMULA.md  INDEX.yml  MDR.md  PHILOSOPHY.md  PLAN_NEXT.md  PLUGIN_DEV.md  ROADMAP.md  SPEC.md  VALUES.md  index.html  schema-1.json  schema-4.json
docs/core/: main.md  (+2 more)
paper/: Formulas.md  Main.md  main.tex  suppA_lean_outline.tex  suppB_code_walkthrough.tex
scripts/: generate_sbom.sh  pre-commit
tests/: test_cli_ask.py  test_cli_misc.py  test_cpp_kernel.py  test_engine_core.py  test_more_units.py  test_plugin_import.py  test_plugins.py  test_stats_util.py
tools/: gen_status.py
veritas/: __init__.py
veritas_cite/: __init__.py
veritas_guardian/: __init__.py
veritas_lean/: __init__.py
veritas_markdown/: __init__.py
veritas_provenance/: __init__.py
veritas_pytest/: __init__.py
(+90 files in other folders)
